Update ApiSecurityConfiguration.java